render expense table

--- a/views/expense-table.pug
+++ b/views/expense-table.pug
@@ -1,3 +1,11 @@
 extends loyout
 block content
- h2 reserv
+ h2 Додати витрати
+ form.expense-table(action="/expense-table" method="POST")
+  p
+    input(name="cost" placeholder="Назва витрати" value="")
+  p  
+    input(name="prise" placeholder="Сума витрат" value="")
+  button ЗБЕРЕГТИ
+  
+  
