--- a/views/profit-table.pug
+++ b/views/profit-table.pug
@@ -3,7 +3,7 @@ block content
   h2 Додати доходи
   form.profit-table(action='/profit-table' method="POST")
     p
-      input(name="cost" placeholder= "введіть дохід" value = "")
+      input(name="income" placeholder= "введіть дохід" value = "")
     p
-      input(name="price" placeholder="сума доходу" value = "")
+      input(name="sum" placeholder="сума доходу" value = "")
     button ЗБЕРЕГТИ
