create and render showprofit.pug

--- a/views/main.pug
+++ b/views/main.pug
@@ -4,3 +4,5 @@ block content
     a(href="profit-table") ДОХІД+
   p
     a(href="expense-table") ВИДАТОК-
+  p
+    a(href="calendar") Показати ДОХІД/ВИДАТОК-
