--- a/views/showexpense.pug
+++ b/views/showexpense.pug
@@ -9,3 +9,8 @@ block content
       span= val.cost 
       | 
       span=val.prise + " " + "грн."
+  h3 Ваші витрати за #{date} становлять #{priseSuma} грн
+  p
+    a(href="/") ГОЛОВНА
+  p
+    a(href="calendar") Показати ДОХІД/ВИДАТОК-
