--- a/views/showprofit.pug
+++ b/views/showprofit.pug
@@ -9,3 +9,8 @@ block content
       span= val.income 
       | 
       span=val.sum + " " + "грн."
+  h3 Ваші доходи за #{date} становлять #{priseSuma} грн.
+  p
+    a(href="/") ГОЛОВНА
+  p
+    a(href="calendar") Показати ДОХІД/ВИДАТОК-
