--- a/views/show-profit-expense.pug
+++ b/views/show-profit-expense.pug
@@ -18,5 +18,5 @@ block content
   p
     a(href="/") ГОЛОВНА
   p
-    a(href="calendar") Показати ДОХІД/ВИДАТОК-
+    a(href="calendar") Показати ДОХІД/ВИДАТОК
    
