--- a/views/showprofit.pug
+++ b/views/showprofit.pug
@@ -9,6 +9,7 @@ block content
       span= val.income 
       | 
       span=val.sum + " " + "грн."
+      button DELETE
   h3 Ваші доходи за #{date} становлять #{priseSuma} грн.
   p
     a(href="/") ГОЛОВНА
